<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/chatItem"
        android:title="Chat"
        android:orderInCategory="1"
        android:icon="@drawable/chat" />
    <item
        android:id="@+id/homeItem"
        android:title="Home"
        android:orderInCategory="2"
...
